fix: align content

--- a/docs/global.css
+++ b/docs/global.css
@@ -275,6 +275,21 @@ figure strong {
 	text-align: center;
 }
 
+#radixMainIcons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 3rem;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+
+	& figure {
+		flex: 1;
+		width: 100%;
+		justify-content: center;
+	}
+}
+
 #radixFeaturesLinks {
 	display: flex;
     flex-wrap: wrap;
